# maxiRT

./: .gitignore  CMakeLists.txt  Justfile  Makefile  README.md  maxiRT  parallel_light.rt  rt2  teapot_big_test.rt  test.rt  testmany.rt  texture_disruption.rt
lib/ffmpeg/: CMakeLists.txt  libavformat.so.61  libswresample.so.5.4.100  libswscale.so.8.13.100
lib/ffmpeg/include/libavutil/: ffversion.h
lib/ffmpeg/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc
lib/libft/: .gitignore  CMakeLists.txt  Justfile  Makefile  compile_flags.txt
lib/libft/include/libft/: libft.h
lib/libft/src/: ft_abs.c  ft_basename.c  ft_bzero.c  ft_gnl.c  ft_gnl_init_buffer.c  ft_gnl_r.c  ft_isdigit.c  ft_max.c  ft_memcpy.c  ft_memdel.c  ft_memdup.c  ft_memset.c  ft_min.c  ft_puterr.c  ft_putstr.c  ft_putstr_fd.c  ft_sftoa.c  ft_sitoa.c  ft_strchr.c  ft_strcmp.c  ft_strcspn.c  ft_strdup.c  ft_strendswith.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strrev.c  ft_strsep.c  ft_strsep.test.c  ft_strspn.c  ft_strtof.c  ft_strtof.test.c  ft_strtoi.c  ft_strtok.c  ft_strtok_r.c  ft_substr.c  ft_swap.c
lib/libft/tests/: greatest-run  greatest.mk
lib/mlx42/: CMakeLists.txt
maps/: complexe.rt  complexe_cartoon.rt  cub.rt  cube_grid.rt  objects.rt  paraboloid.rt  parallel_light.rt  parsing_test.rt  planes.rt  skybox.rt  teapot.rt  test.rt  test_obj.rt  texture_disruption.rt  three_spheres.rt  two_spheres.rt  two_spheres_2.rt
maps/bonus/: complexe.rt  complexe2.rt  cub.rt  multi_light.rt  night.rt  objects.rt  planes.rt  test.rt
maps/bonus/tests/: 2nd_degrees_objects.rt  bump_map.rt  color_disruption.rt  colored_mutli_spot_lights.rt  specular_reflection.rt
maps/mandatory/: objects.rt  one_sphere.rt  test.rt  three_spheres.rt  two_spheres.rt
maps/mandatory/tests/: basic_shapes_1.rt  (+13 more)
maps/tests/: bump_map.rt
src/: minirt.c
src_bonus/: minirt_bonus.c
tests/: test.sh
(+690 files in other folders)
